--- a/httpd.conf
+++ b/httpd.conf
@@ -36,7 +36,7 @@
 #
 Define SRVROOT "C:/Apache24"
 
-ServerRoot "${SRVROOT}"
+ServerRoot "C:/Apache24"
 
 #
 # Mutex: Allows you to set the mutex mechanism and mutex file directory
@@ -159,7 +159,7 @@ LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule remoteip_module modules/mod_remoteip.so
 #LoadModule request_module modules/mod_request.so
 #LoadModule reqtimeout_module modules/mod_reqtimeout.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 #LoadModule sed_module modules/mod_sed.so
 #LoadModule session_module modules/mod_session.so
 #LoadModule session_cookie_module modules/mod_session_cookie.so
@@ -224,7 +224,7 @@ ServerAdmin s2019s11@e-mirim.hs.kr
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-ServerName localhost:80
+ServerName localhost
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -232,7 +232,7 @@ ServerName localhost:80
 # <Directory> blocks below.
 #
 <Directory />
-    AllowOverride none
+    AllowOverride All
     Require all denied
 </Directory>
 
@@ -248,8 +248,8 @@ ServerName localhost:80
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "${SRVROOT}/htdocs"
-<Directory "${SRVROOT}/htdocs">
+DocumentRoot "C:/Apache24/htdocs"
+<Directory "C:/Apache24/htdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -282,7 +282,7 @@ DocumentRoot "${SRVROOT}/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php
 </IfModule>
 
 #
@@ -535,3 +535,6 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
+LoadModule php7_module "C:/php/php7apache2_4.dll"
+AddType application/x-httpd-php .html .php
+AddHandler application/x-httpd-php .php
